--- a/css/main.css
+++ b/css/main.css
@@ -241,7 +241,7 @@ __   ____ _ _ __(_) __ _| |__ | | ___  ___
 
 /* line 56, ../sass/_dark.scss */
 .brand-title.dark {
-  background: orange;
+  background: #FF69B4;
 }
 
 /* line 6, ../sass/_debug.scss */
@@ -298,7 +298,7 @@ __   ____ _ _ __(_) __ _| |__ | | ___  ___
 /* line 29, ../sass/_menu.scss */
 .pure-menu li a:hover, .pure-menu li a:focus {
   color: #222;
-  background: orange;
+  background: #FF69B4;
 }
 
 /* line 2, ../sass/_mp.scss */
@@ -589,7 +589,6 @@ __   ____ _ _ __(_) __ _| |__ | | ___  ___
 html, body {
   height: 100%;
   width: 100%;
-  overflow: hidden;
 }
 
 /* line 145, ../sass/main.scss */
@@ -600,13 +599,13 @@ html, button, input, select, textarea,
 
 /* line 150, ../sass/main.scss */
 ::selection {
-  background: orange;
+  background: #FF69B4;
   color: #fff;
 }
 
 /* line 154, ../sass/main.scss */
 ::-moz-selection {
-  background: orange;
+  background: #FF69B4;
   color: #fff;
 }
 
@@ -622,7 +621,7 @@ a {
 
 /* line 166, ../sass/main.scss */
 a:hover {
-  background: orange;
+  background: #FF69B4;
 }
 
 /* line 170, ../sass/main.scss */
@@ -657,13 +656,22 @@ a:hover {
 .content .left-pane {
   height: 100%;
 }
+/* line 198, ../sass/main.scss */
+.content .right-pane {
+  height: 100%;
+}
+/* line 201, ../sass/main.scss */
+.content .right-pane iframe {
+  width: 100%;
+  height: 100%;
+}
 
-/* line 200, ../sass/main.scss */
+/* line 209, ../sass/main.scss */
 .reader {
   max-width: 800px;
 }
 
-/* line 208, ../sass/main.scss */
+/* line 217, ../sass/main.scss */
 .brand-title {
   font-size: 2.3em;
 }
