--- a/sass/main.scss
+++ b/sass/main.scss
@@ -104,7 +104,7 @@ $primary-dark: #222;
 $primary-light: #fff;
 $mid-tone: #666;
 $mid-light: #ddd;
-$highlight: orange;
+$highlight: #FF69B4;
 $base-size: 16px;
 $reader-size: 1.25em;
 
@@ -139,7 +139,7 @@ $desktop-break: 81.25em;
 html, body {
   height: 100%;
   width: 100%;
-  overflow: hidden;
+  //overflow: hidden;
 }
 
 html, button, input, select, textarea,
@@ -193,6 +193,15 @@ a:hover {
 
   .left-pane {
     height: 100%;
+  }
+
+  .right-pane {
+    height: 100%;
+
+    iframe {
+      width: 100%;
+      height: 100%;
+    }
   }
 }
 
